--- a/resources/content/about.html
+++ b/resources/content/about.html
@@ -3,5 +3,7 @@
         <td valign="middle">Built with:</td>
         <td><img src=":/images/qt_logo_32.png"></td>
         <td valign="middle">Qt</td>
+        <td><img src=":/images/scintilla_logo.png"></td>
+        <td valign="middle">Scintilla</td>
     </tr>
 </table>
